--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -17,6 +17,9 @@
              <li class="nav-item active" *ngIf="authSvc.usuario.uid && this.usuario?.tipoPerfil !='Especialista' ">
                 <a class="nav-link" [routerLink]="['/solicitarTurno']">Solicitar Turno</a>
             </li>
+            <li class="nav-item active" *ngIf="authSvc.usuario.uid && this.usuario?.tipoPerfil =='Paciente' ">
+                <a class="nav-link" [routerLink]="['/misTurnos']">Mis Turno</a>
+            </li>
             <!--<li class="nav-item active" *ngIf="authSvc.usuario.uid">
                 <a class="nav-link" [routerLink]="['/Listado']">Juegos</a>
             </li>
