--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,7 +1,8 @@
 <div class="row">
     <div class="col-md-7 mx-auto mt-5" *ngIf="registerForm != undefined">
         <div class="card">
-            <div class="card-body FormularioPaciente" [ngClass]="{FormularioEspecialista: this.tipoPerfil =='Especialista'}">
+            <div class="card-body FormularioPaciente"
+                [ngClass]="{FormularioEspecialista: this.tipoPerfil =='Especialista'}">
                 <h1 class="text-center mb-3"><b>Registro</b></h1>
                 <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
                     <div class="row formulario">
@@ -106,10 +107,14 @@
                         </div>
 
                     </div>
+                    <!-- captcha -->
+                    <!-- <div class="g-recaptcha" data-sitekey="6LdqbwMbAAAAAEYxMfKiiCNmDgOXlcD0homLcOZZ"></div>
+                    <br>
+                    <div id="status"></div>
+                    <input type="button" (click)="validaCaptcha()" value="Descargar"> -->
+
                     <button type="submit" class="btn btn-primary btn-lg btn-block"
                         [disabled]="registerForm.invalid">Crear cuenta nueva</button>
-                    
-                    <!-- <button type="submit" class=" mt-4 btn btn-primary btn-lg btn-block">Crear cuenta nueva</button> -->
 
                 </form>
                 <button type="submit" class="btn btn-primary" (click)="CargaDatos()">Carga trucho</button>
