--- a/src/app/components/mis-turnos/mis-turnos.component.html
+++ b/src/app/components/mis-turnos/mis-turnos.component.html
@@ -29,7 +29,7 @@
                             <td class="text-left" class="text-center">{{turno.estado}}</td>
                             <td class="text-left" class="text-center">
                                 <button type="button" class="btn btn-danger" title="Cancelar turno"
-                                    (click)="cancelarTurno(turno)">
+                                    (click)="cancelarTurno(turno)" *ngIf="turno.estado != 'CANCELADO'">
                                     <i class="far fa-calendar-times"></i>
                                 </button>
                             </td>
