--- a/src/app/components/mis-turnos-especialista/mis-turnos-especialista.component.html
+++ b/src/app/components/mis-turnos-especialista/mis-turnos-especialista.component.html
@@ -1,5 +1,5 @@
 <div class="row" *ngIf="usuarioRegistrado != null && verTabla == true">
-    <div class="col-md-10 mx-auto mt-4" *ngIf="usuarioRegistrado.tipoPerfil == 'Paciente'">
+    <div class="col-md-10 mx-auto mt-4" *ngIf="usuarioRegistrado.tipoPerfil == 'Especialista'">
         <div class="card">
             <div class="card-body">
                 <h1 class="text-center mb-3"><b>Mis turnos.</b></h1>
@@ -40,6 +40,8 @@
         </div>
     </div>
 </div>
+
+
 
 <div *ngIf="cancelarTurnoPantalla">
     <app-cancelar (OpcionEvent)="eventoCancelarTurno($event)" (mensajeEvent)="eventoMensaje($event)">
