--- a/src/app/components/mis-turnos-especialista/mis-turnos-especialista.component.html
+++ b/src/app/components/mis-turnos-especialista/mis-turnos-especialista.component.html
@@ -28,9 +28,24 @@
                             <td class="text-left" class="text-center">{{turno.estado}}</td>
                             <td class="text-left" class="text-center">
                                 <button type="button" class="btn btn-danger" title="Cancelar turno"
-                                    (click)="cancelarTurno(turno)" *ngIf="turno.estado != 'CANCELADO'">
+                                    (click)="cancelarTurno(turno)"
+                                    *ngIf="turno.estado != 'CANCELADO' && turno.estado != 'FINALIZADO'  && turno.estado != 'ACEPTADO'">
                                     <i class="far fa-calendar-times"></i>
                                 </button>
+                                <button type="button" class="btn btn-success btnmio" title="Aceptar turno"
+                                    (click)="aceptarTurno(turno)"
+                                    *ngIf="turno.estado != 'CANCELADO' && turno.estado != 'ACEPTADO' && turno.estado != 'FINALIZADO'">
+                                    <i class="far fa-check-square"></i>
+                                </button>
+                                <button type="button" class="btn btn-primary btnmio" title="Finalizar turno"
+                                    (click)="finalizarTurno(turno)" *ngIf="turno.estado == 'ACEPTADO'">
+                                    <i class="fas fa-user-check"></i>
+                                </button>
+                                <button type="button" class="btn btn-info btnmio" title="Ver Reseña"
+                                    (click)="resenaTurno(turno)" *ngIf="turno.estado == 'FINALIZADO'">
+                                    <i class="fas fa-paperclip"></i>
+                                </button>
+
                             </td>
                         </tr>
                     </tbody>
@@ -46,4 +61,9 @@
 <div *ngIf="cancelarTurnoPantalla">
     <app-cancelar (OpcionEvent)="eventoCancelarTurno($event)" (mensajeEvent)="eventoMensaje($event)">
     </app-cancelar>
+</div>
+
+
+<div *ngIf="FinalizarTurnoPantalla">
+    <app-finalizar (OpcionEvent)="eventoFinalizarTurno($event)" (mensajeEvent)="eventoMensaje($event)"></app-finalizar>
 </div>
