--- a/src/app/components/solicitar-turno/solicitar-turno.component.html
+++ b/src/app/components/solicitar-turno/solicitar-turno.component.html
@@ -1,5 +1,5 @@
 <!-- PACIENTE -->
-<div class="row" *ngIf="usuarioRegistrado != null">
+<div class="row  animate__animated animate__bounceInRight" *ngIf="usuarioRegistrado != null">
     <div class="col-md-9 mx-auto mt-4" *ngIf="usuarioRegistrado.tipoPerfil == 'Paciente'">
         <div class="card">
             <div class="card-body">
@@ -49,7 +49,7 @@
     </div>
 </div>
 <!-- ADMIN -->
-<div class="row" *ngIf="usuarioRegistrado != null">
+<div class="row  animate__animated animate__bounceInRight" *ngIf="usuarioRegistrado != null">
     <div class="col-md-9 mx-auto mt-4" *ngIf="usuarioRegistrado.tipoPerfil == 'Admin'">
         <div class="card">
             <div class="card-body">
@@ -178,66 +178,3 @@
         </div>
     </div>
 </div>
-<!-- <div class="row">
-    <div class="col-md-9 mx-auto mt-4">
-        <div class="card">
-            <div class="card-body">
-                <h1 class="text-center mb-3"><b>Solicitar Turno.</b></h1>
-                <div class="row formulario">
-                    <div class="form-group col-md-6 mb-3">
-                        <label for="especialidadElejida" class="form-label">Seleccione la especialidad
-                            &nbsp;&nbsp;</label>
-                        <select class="form-select" name="especialidadElejida" id="especialidadElejida"
-                            [(ngModel)]="especialidadNombre" (change)="onChangeEspecialidad($event)">
-                            <option *ngFor="let especialidad of listadoEspecialidades let i=index"
-                                value="{{especialidad.nombre}}">{{especialidad.nombre}}</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-md-6 mb-3" *ngIf="especialidadElejida != null">
-                        <label for="profesional" class="form-label">Seleccione el profesional &nbsp;&nbsp;</label>
-                        <select class="form-select" name="profesional" id="profesional" [(ngModel)]="especialistaNombre"
-                            (change)="onChangeEspecialista($event)">
-                            <option *ngFor="let especialista of listadoUsuariosEspecialistasCalificados let i=index"
-                                value={{especialista.nombre}}>{{especialista.nombre}}</option>
-                        </select>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary btn-lg btn-block mt-2" (click)="pedirTurno()">Solicitar
-                    Turno</button>
-                <button class="btn btn-primary btn-lg btn-block mt-2" (click)="auxiliar()">auxiliar</button>
-            </div>
-        </div>
-    </div>
-</div> -->
-<!-- 
-<div class="row">
-    <div class="col-md-9 mx-auto mt-4">
-        <div class="card">
-            <div class="card-body">
-                <h1 class="text-center mb-3"><b>Listado de dias y horarios.</b></h1>
-
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col">Dia del turno</th>
-                            <th scope="col">Especialidad</th>
-                            <th scope="col">Profesional</th>
-                            <th scope="col">Horario del turno</th>
-                            <th scope="col">Pedir Turno</th>
-                        </tr>
-                    </thead>
-                    <tbody *ngFor="let dia of listadoDeObjetosDias">
-                        <tr *ngIf="dia.diaSemana != 'DOMINGO' && dia.data.trabaja != false ">
-                            <td>{{dia.dia | date: 'fullDate'}}</td>
-                            <td>{{especialidadNombre}}</td>
-                            <td>{{especialistaNombre}}</td>
-                            <td></td>
-                            <td><button class="btn btn-success">Reservar Turno</button></td>
-                        </tr>
-                    </tbody>
-                </table>
-
-            </div>
-        </div>
-    </div>
-</div> -->
