--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,6 +11,9 @@
             <li class="nav-item active" *ngIf="authSvc.usuario.uid && this.usuario?.tipoPerfil =='Admin' " >
                 <a class="nav-link"  [routerLink]="['/usuarios']">Usuarios</a>
             </li>
+            <li class="nav-item active" *ngIf="authSvc.usuario.uid && this.usuario?.tipoPerfil =='Admin' " >
+                <a class="nav-link"  [routerLink]="['/graficos']">Graficos</a>
+            </li>
              <li class="nav-item active" *ngIf="authSvc.usuario.uid && this.usuario?.tipoPerfil !='Especialista' ">
                 <a class="nav-link" [routerLink]="['/solicitarTurno']">Solicitar Turno</a>
             </li>
