Excel de atenciones

--- a/src/app/components/mi-perfil/mi-perfil.component.html
+++ b/src/app/components/mi-perfil/mi-perfil.component.html
@@ -42,8 +42,10 @@
 
                     <div class="col-md-12 mx-auto mt-2 text-center" *ngIf="usuario.tipoPerfil == 'Especialista'">
                         <hr>
+                        <button class="btn btn-success" (click)="descargar()"><i
+                            class="fa fa-download"></i> Descargar excel con todas mis atenciones</button>
+                        <hr>
                         <h2><b>Mis horarios de atención al publico</b></h2>
-
                         <table class="table table-hover">
                             <thead>
                                 <tr>
