--- a/src/app/auth/usuario/usuario.component.html
+++ b/src/app/auth/usuario/usuario.component.html
@@ -76,10 +76,16 @@
     </div>
 
     <div class="col-md-8 col-lg-8 order-md-last mt-4" id="box">
-        <div class="card">
+        <div class="text-center">
+            <button class="btn btn-success text-center" (click)="descargar()"><i class="fa fa-download"></i>
+                Descargar excel con todos los USUARIOS</button>
+        </div>
+        <div class="card mt-3">
             <div class="card-body">
-                <h2 class="mb-3 mt-3 text-center"><b>Listado de Usuarios ESPECIALISTAS.</b></h2>
-                <table class="table table-hover">
+                <div class="text-center">
+                    <h2 class="mb-3 mt-3 text-center"><b>Listado de Usuarios ESPECIALISTAS.</b></h2>
+                </div>
+                <table class="table table-hover mt-2">
                     <thead>
                         <tr>
                             <th scope="col">Nombre</th>
@@ -111,7 +117,7 @@
                 </table>
             </div>
         </div>
-        
+
     </div>
 
 </div>
@@ -124,10 +130,11 @@
         </div>
     </div>
     <div class="col-md-8 col-lg-8 order-md-last" id="box">
-        <div class="card">
-            <div class="card-body">
+        <h2 class="mb-3 mt-3 text-center"><b>Listado de Usuarios PACIENTES HC.</b></h2>
+        <div class="card mt-3" *ngFor="let hc of historiasClinicas let i=index">
+            <div class="card-body ">
                 <!-- *ngFor="let especialidad of listadoEspecialidades let i=index" -->
-                <div class="col-md-12" *ngFor="let hc of historiasClinicas let i=index">
+                <div class="col-md-12">
                     <app-detalle-hc [hc]='this.hc'></app-detalle-hc>
                 </div>
             </div>
