--- a/src/app/components/historiaClinica/ver-mi-hc/ver-mi-hc.component.html
+++ b/src/app/components/historiaClinica/ver-mi-hc/ver-mi-hc.component.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button class="btn btn-danger btn-block">Volver a mis turnos.</button>
+                <button class="btn btn-danger btn-block" (click)="volver()">Volver a mis turnos.</button>
             </div>
         </div>
     </div>
