--- a/src/app/components/mis-turnos/mis-turnos.component.html
+++ b/src/app/components/mis-turnos/mis-turnos.component.html
@@ -85,5 +85,5 @@
 </div>
 
 <div *ngIf="verMiHCPantalla">
-    <app-ver-mi-hc [hc]="this.historiaClinica![0]" ></app-ver-mi-hc>
+    <app-ver-mi-hc [hc]="this.historiaClinica![0]"  (volverHCEvent)="eventoHC($event)" ></app-ver-mi-hc>
 </div>
