--- a/src/app/components/historiaClinica/detalle-hc/detalle-hc.component.html
+++ b/src/app/components/historiaClinica/detalle-hc/detalle-hc.component.html
@@ -7,5 +7,5 @@
 <h6 class="text-center">altura: {{this.hc!.altura! }} cm</h6>
 <h6 class="text-center">presion: {{this.hc!.presion! }}</h6>
 <h6 class="text-center">temperatura: {{this.hc!.temperatura! }} grados</h6>
-<h6 class="text-center">{{this.hc!.key1! }}: {{this.hc!.dato1! }} </h6>
-<h6 class="text-center">{{this.hc!.key2! }}: {{this.hc!.dato2! }} </h6>
+<h6 class="text-center" *ngIf="this.hc!.key1 != '' && this.hc!.dato1 != '' ">{{this.hc!.key1! }}: {{this.hc!.dato1! }} </h6>
+<h6 class="text-center" *ngIf="this.hc!.key2 != '' && this.hc!.dato2 != '' ">{{this.hc!.key2! }}: {{this.hc!.dato2! }} </h6>
