--- a/src/app/components/historiaClinica/detalle-hc/detalle-hc.component.html
+++ b/src/app/components/historiaClinica/detalle-hc/detalle-hc.component.html
@@ -2,10 +2,18 @@
 <h2 class="text-center"><b>Historia Clinica</b></h2>
 <h4 class="text-center"> {{this.hc!.paciente!.nombre}} {{this.hc!.paciente!.apellido}}</h4>
 <hr class="text-center">
- 
-<h6 class="text-center">peso: {{this.hc!.peso! }} kilos</h6>
-<h6 class="text-center">altura: {{this.hc!.altura! }} cm</h6>
-<h6 class="text-center">presion: {{this.hc!.presion! }}</h6>
-<h6 class="text-center">temperatura: {{this.hc!.temperatura! }} grados</h6>
-<h6 class="text-center" *ngIf="this.hc!.key1 != '' && this.hc!.dato1 != '' ">{{this.hc!.key1! }}: {{this.hc!.dato1! }} </h6>
-<h6 class="text-center" *ngIf="this.hc!.key2 != '' && this.hc!.dato2 != '' ">{{this.hc!.key2! }}: {{this.hc!.dato2! }} </h6>
+
+<h6 class="text-center" *ngIf="this.hc!.peso != ''">Peso: {{this.hc!.peso! }} kilos</h6>
+<h6 class="text-center" *ngIf="this.hc!.altura != ''">Altura: {{this.hc!.altura! }} cm</h6>
+<h6 class="text-center" *ngIf="this.hc!.presion != ''">Presión: {{this.hc!.presion! }} de presión</h6>
+<h6 class="text-center" *ngIf="this.hc!.temperatura != ''">Temperatura: {{this.hc!.temperatura! }} grados</h6>
+<h6 class="text-center" *ngIf="this.hc!.key1 != '' && this.hc!.dato1 != '' ">{{this.hc!.key1! }}: {{this.hc!.dato1! }}
+</h6>
+<h6 class="text-center" *ngIf="this.hc!.key2 != '' && this.hc!.dato2 != '' ">{{this.hc!.key2! }}: {{this.hc!.dato2! }}
+</h6>
+
+<div *ngIf="this.hc!.peso == '' && this.hc!.altura == '' && this.hc!.presion == '' && this.hc!.temperatura == '' 
+    && this.hc!.key1 == '' && this.hc!.dato1 == '' && this.hc!.key2 == '' && this.hc!.dato2 == ''">
+    <h5 class="text-center mt-5">Lo sentimos!</h5>
+    <h6 class="text-center">Hasta el momento nadie cargo la Historia Clinica de este paciente!</h6>
+</div>
