--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -23,18 +23,9 @@
             <li class="nav-item active" *ngIf="authSvc.usuario.uid && this.usuario?.tipoPerfil =='Especialista' ">
                 <a class="nav-link" [routerLink]="['/MisTurnos']">Mis Turnos</a>
             </li>
-            <!--<li class="nav-item active" *ngIf="authSvc.usuario.uid">
-                <a class="nav-link" [routerLink]="['/Listado']">Juegos</a>
+            <li class="nav-item active" *ngIf="authSvc.usuario.uid && this.usuario?.tipoPerfil =='Especialista' ">
+                <a class="nav-link" [routerLink]="['/pacientes']">Mis Pacientes atendidos</a>
             </li>
-            <li class="nav-item active" *ngIf="authSvc.usuario.uid">
-                <a class="nav-link" [routerLink]="['/chat']">Chat</a>
-            </li>
-            <li class="nav-item active" *ngIf="authSvc.usuario.uid">
-                <a class="nav-link" [routerLink]="['/encuesta']">Encuesta</a>
-            </li>
-            <li class="nav-item active" *ngIf="authSvc.usuario.uid">
-                <a class="nav-link" [routerLink]="['/resultados']">Resultados</a>
-            </li> -->
         </ul>
         <ul class="navbar-nav mx-auto" *ngIf="user$ |async as user; else login">
 
